--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Torrents</title>
-    <script src="require.js"></script>
 </head>
 <body>
+    <div id="main"></div>
 
+    <script src="./require.js"></script>
 </body>
 </html>
