--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Torrents</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <style>
+        html {
+            font-family: 'Roboto', sans-serif;
+        }
+    </style>
 </head>
 <body>
     <div id="main"></div>
