Removed space between main body and edge of screen

--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,10 @@
     <title>Torrents</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <style>
-        html {
+        body {
             font-family: 'Roboto', sans-serif;
+            padding: 0;
+            margin: 0;
         }
     </style>
 </head>
